update SDK version

--- a/verticaltablayout/build.gradle
+++ b/verticaltablayout/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '26.0.2'
-
+    compileSdkVersion ANDROID_BUILD_SDK_VERSION as int
+    buildToolsVersion ANDROID_BUILD_TOOLS_VERSION as String
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 25
+        minSdkVersion MIN_SDK as int
+        targetSdkVersion TARGET_SDK as int
         versionCode 1
         versionName "1.0"
     }
@@ -24,7 +23,6 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    provided 'com.android.support:support-v4:25.4.0'
+    implementation "com.android.support:support-v4:${SDK_VERSION}"
     compile 'q.rorbin:badgeview:1.1.2'
 }
